src/main/resources/Krakatau-master/tests/assembler/bad/badintlitval.j
.class public whocares
.super java/lang/Object
.const [1] = Int 444444444444
.end class
